{
    "name": "Player_Controls",
    "maps": [
        {
            "name": "Player",
            "id": "b9fa3722-c5fc-49d0-969a-67c7cf693933",
            "actions": [
                {
                    "name": "Move_Horizontal",
                    "type": "PassThrough",
                    "id": "e48e70cc-d687-4c33-9618-a932f5718ed1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move_Vertical",
                    "type": "PassThrough",
                    "id": "c241ca26-e939-46c6-b14d-5a8ff770a893",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "b48212ac-2473-4728-ae7e-605837d504e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "d121131b-5015-4bae-9549-7b3ff0943bd2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8f8001c1-bedd-40cf-9322-63d690e12d75",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "59ae55b7-aaf0-4316-abd2-5e494e9d6b1c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "344718d2-6991-4e25-99d4-e1d32189f96c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "c0b51a42-b8be-4de9-ab0b-de5de29a3c70",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2abd38e0-55e6-48f2-b08c-916989801f7a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "027e1c39-0e59-4595-bd2f-c71d8805ec75",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}